fix website field in contribute, add fieldsets for spacing

--- a/corpsey/static/css/application.less
+++ b/corpsey/static/css/application.less
@@ -541,6 +541,14 @@ h1.comic_2 {
             width: 300px;
             margin: 0 auto;
         }
+        fieldset {
+            border: none;
+            padding: 0;
+            margin: 0;
+            &.info {
+                margin-top: 40px;
+            }
+        }
     }
     .comic {
         &.single {
